Tasks: Overdue calculation sometimes incorrect
Now is 9th May 16:53:00 UTC, local time 19:53. I create a task with DUE:20220509T160000Z
. The To-Do bar shows correctly, that the task is overdue. The Tasks window does not show it in red (as overdue). I change the time in the task several times, it is never displayed in red in the Tasks window. I remove the hh:mm component and set DUE;VALUE=DATE:20220509
. Now the task is rendered in red.
- Tasks with DUE in UTC are never shown as overdue (red) in the Tasks window.
Edited by Milan Crha