I#1902 - Tasks: Overdue calculation sometimes incorrect

Closes https://gitlab.gnome.org/GNOME/evolution/-/issues/1902